# violence-detection

./: .gitignore  create_showcase.py
backend/classification_service/: Dockerfile  cert.pem  key.pem  main.py  pyproject.toml  requirements.txt
backend/classification_service/helpers/: bucket_helper.py  inference_helper.py
backend/classification_service/schemas/: classification.py
backend/classification_service/services/: classification_service.py  inference_runtime.py
backend/people_tracking_service/: Dockerfile  cert.pem  key.pem  main.py  pyproject.toml  requirements.txt
backend/people_tracking_service/helpers/: bucket_helper.py  inference_helper.py
backend/people_tracking_service/schemas/: people_tracking.py
backend/people_tracking_service/services/: inference_runtime.py  people_tracking.py
backend/shared_models/: pyproject.toml
backend/shared_models/shared_models/: __init__.py  inference_model.py
backend/violens_service/: Dockerfile  cert.pem  key.pem  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/violens_service/alembic/: env.py
backend/violens_service/core/: security.py
backend/violens_service/exception_handling/: exception_handler.py
backend/violens_service/helpers/: bucket_helper.py  classification_label_helper.py  email_helper.py  env_helper.py  jwt_helper.py  model_validation_helper.py
backend/violens_service/models/: __init__.py  action.py  dataset.py  dataset_status.py  inference_action.py  inference_history.py  inference_history_classification.py  inference_model.py  user.py  video.py
backend/violens_service/repositories/: datasets_repository.py  inference_models_repository.py  videos_repository.py
backend/violens_service/schemas/: datasets_schema.py  users_schema.py  videos_schema.py
backend/violens_service/scripts/: run_tests.py
backend/violens_service/services/: auth_service.py  classification_client.py  credits_service.py  dataset_validation.py  datasets_service.py  inference_actions_service.py  inference_history_service.py  (+3 more)
(+576 files in other folders)
