[project]
name = "classification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "onnx>=1.16.0",
    "onnx2torch>=1.5.13",
    "opencv-python>=4.13.0.92",
    "starlette>=1.0.0",
    "ultralytics>=8.4.48",
    "uvicorn>=0.46.0",
]
