[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-models"
version = "0.1.0"
description = "Shared model enums for violence detection"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["shared_models"]
package-dir = { "" = "." }
